# rag-pdf-processor

./: .gitignore  LICENSE  README.md  output.txt  pyproject.toml  requirements.txt
chunkers/: by_markdown.py  recursive_char.py  semantic.py
csv/: fubon.csv  game.csv  ntu.csv  report.csv
csv/by_markdown/: fubon.csv  game.csv  ntu.csv  report.csv
csv/recursive_char/: fubon.csv  fubon_recursive_char.csv  game.csv  game_recursive_char.csv  ntu.csv  report.csv
markdown/: fubon.md  game.md  ntu.md  report.md
output/by_markdown/: fubon.txt  game.txt  ntu.txt  report.txt
output/recursive_char/: fubon.txt  game.txt  ntu.txt  report.txt
pdf_to_markdown/: with_pdfplumber.py  with_pymupdf.py
rag_pdf_processor/: requirements.txt
rag_pdf_processor/chunkers/: by_markdown.py  by_page.py  recursive_char.py  semantic.py
rag_pdf_processor/pdf_to_markdown/: with_pdfplumber.py
rag_pdf_processor/tools/: get_embedding_ollama.py  get_embedding_openai.py  math_utils.py  save_result.py  transform_to_chunk.py
src/rag_pdf_processor/chunkers/: by_markdown.py  by_page.py  recursive_char.py  semantic.py
src/rag_pdf_processor/pdf_to_markdown/: with_pymupdf.py
src/rag_pdf_processor/tools/: get_embedding_ollama.py  split_lines.py
tools/: get_embedding.py  get_embedding_ollama.py  markdown_utils.py  pdf_to_markdown.py  save_result.py  split_characters.py  split_into_sentences.py
