[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "rag_pdf_processor_pp1457"
version = "0.0.1"
authors = [
  { name="Paul Liao", email="liaoyunyang0815@gmail.com" },
]
description = "A package for processing pdf"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pp1457/rag-pdf-processor"
Issues = "https://github.com/pp1457/rag-pdf-processor/issues"
